# protein_evaluation

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-pinned.txt  requirements.txt
.github/workflows/: tests.yml
complex_eval/: __init__.py  aggregate.py  align.py  cli.py  diagnostics.py  evaluate.py  io_utils.py  metrics.py  multimer.py  validation.py  visualize.py
docs/: engineering_report.md
examples/benchmark_visualization/: README.md  failures.csv  per_sample_diagnostics.jsonl  per_sample_metrics.csv  per_target_best_of_k.csv  report.html  summary_best_of_k.json  summary_diagnostics.json
examples/benchmark_visualization/source/: manifest.csv
tests/: test_diagnostics.py  test_metrics.py  test_multimer.py  test_regression.py  test_safety.py  test_validation.py  test_visualize.py
tests/fixtures/benchmark/: expected_per_sample.json  expected_summary_top1.json  manifest.csv
